# vellvm

./: .envrc  .gitignore  .gitmodules  .travis.yml  CITATION.cff  Dockerfile  GaryTODO.txt  LICENSE.md  MemoryTour.org  README.md  _CoqProject  build-coq.sh  cache-build.nix  cache-builder.sh  cache-coq.nix  cis700_proposal.org  compile-coq.nix  coq-twophase.install  coq-vellvm.opam  coqc-cache.nix  coqc-cache.sh  dev.md  dune-project  dune_hacking_brainstorm.txt  files-to-axe.txt  flake.nix  llvm-quickchick.org  nix.org  notes.org  paper-theorems.md  paper-theorems.org  pick-and-memory.org  poison.org  release.nix  rocq-vellvm.install  rocq-vellvm.opam  testnotes.md  vellvm-quickchick-overview.org
.github/workflows/: hugo.yml  jekyll-gh-pages.yml  test.yml  twophase.yml  vellvm.yml
ci/: keep_alive.sh
doc/intern/: ICFP'21_mapping.md
doc/logo/: vellvm-colors.md
docs/: README.md  hugo.toml
docs/content/: _index.md  about.md  faq.md  release.md  research.md  structure.md  tests.md
docs/layouts/: baseof.html  home.html  single.html
docs/logo/: README.md
examples/Imp2Vir/: AnonymousCIR.v  CFGC_CFLang.v  CFGC_Combinators.v  CFGC_DenotationsCombinators.v  CFGC_Imp2Vir.v  CFGC_Interface.v  CFGC_Interface.v.old  CFGC_Utils.v  CFG_Combinators.v  Combinators.v  CombinatorsWF.v  CompileExpr.v  CvirCombinators.v  CvirCombinatorsWF.v  CvirSyntax.v  Fin.v  Imp.v  Imp2Cvir.v  Makefile  README.md  Relabel.v  Semantics.v  Sir.v  Unique.v  Utils.v  Utils_tutorial.v  Vec.v  Vector.v  _CoqProject
lib/: README.md
notes/: Internalizing.md  Readme.md  dev.md  interp-prop.org  memory-todo.org  nix.org  pick-and-memory.org  propositional-state.org  release.md
oat/: .depend  Makefile  _CoqProject  ll.ml  quaker  simple.oat
oat/coq/: #StateError.hs#  AST.v  Compiler.v  CompilerCtxt.v  Denotation.v  DynamicValues.v  Handlers.v  LL.v  LLInject.v  Memory.v  OatEvents.v  OatIO.v  Plumbing.v  TypingContext.v
oat/ml/: Makefile  dune  dune-project  length1.oat  main.ml  quaker
perf/: README.md  alloca-churn.ll  alloca-large.ll  block-jumps.ll  calls-fib.ll  calls-large-fn.ll  calls-many-fns.ll  gen-block-jumps.py  gen-calls-large-fn.py  gen-calls-many-fns.py  gen-locals-chain.py  gen-switch-cases.py  global-init.ll  iptr-roundtrip.ll  locals-chain.ll  loop-phi-arith.ll  mem-aggregate.ll  mem-scan.ll  memcpy-chunk.ll  memset-chunk.ll  run.sh  switch-cases.ll  undef-pick.ll  vector-ops.ll  wide-arith.ll
qc-test-failures/: README.org
qc-test-failures/clang-segmentation-fault/: clang-segfault.ll  temporary_vellvm2.ll
qc-test-failures/extract-element-disagreement/: foo.ll
qc-test-failures/extract-element-disagreement2/: extractelement1.ll  temporary_vellvm-reduced.ll  temporary_vellvm.ll
qc-test-failures/extract-element-disagreement3/: temporary-vellvm.ll
qc-test-failures/ptrtoint-roundtrip/: extractvalue-ptrtoint-bug.md  ptrtoint2.ll  ptrtoint2.s  ptrtoint7.s
qc-test-failures/use-after-free/: ub-reduced.ll
src/: .CoqMakefile.d  .ll_files_1.tmp  CRelationClasses.mli.patch  CoqMakefile  CoqMakefile.conf  Denotation.ml.patch  GenAlive2.ml.patch  Makefile  Makefile.minimal  _CoqProject  _RocqProject  backfile  cachix-push.sh  dune-project  failing_tests_todo.md  fix-extraction.sh  merge_and_quickchick_mutants.py  qc-evaluations.sh  runner.py
src/ITreeSpec/: AddSawCalls.v  Automation.v  Concrete.v  DefRefines.v  FixTree.v  ITreeSpecCombinatorFacts.v  ITreeSpecDefinition.v  ITreeSpecFacts.v  LetRecRefines.v  MRecSpec.v  Padded.v  RecFixSpecTotal.v  RecSpecFix.v  Relations.v  SortEx.v  SpecM.v  SpecMFacts.v  TpDesc.v  TpEnc.v
src/ItreeExtra/: IForest.v  dune
src/ast/: Extract_Datatypes.v  Extract_Haskell_Ollvm_ast.v  Extract_Ollvm_ast.v  Makefile  Ollvm_ast.v
src/coq/: AilTypes.v  AstInd.v  AstLib.v  CFG.v  CFGProp.v  CerberusTypes.v  Classes.v  Compiler.v  CompilerProp.v  CompilerQuickChick.v  ConstantFolding.v  DeadInstr.v  Debug.v  DecidableEquality.v  DecidableProp.v  Denotation.v  DenotationProp.v  Denotation_Theory.v  Dom.v  DynamicTypes.v  DynamicValues.v  Effects.v  Environment.v  Error.v  ExpLemmas.v  Extract.v  Extract_Haskell_Ollvm_ast.v  Extract_Ollvm_ast.v  Failure.v  FinLabels.v  Floats.v  GenAST.v  Global.v  Imp.v  ImpCEvalFun.v  ImpCorrectness.v  ImpCorrectnessTest.v  ImpOptimizer.v  ImpQuickChick.v  InstrLemmas.v  (+67 more)
src/doc/: .gitignore  README  _tags
src/experiments/: CoqEqDec.v  Eff.v  EffPlus.v  FRTL.v  FSSA.v  LCRTL.v  LLVM_SSA.v  LTS.v  Makefile  (+24 more)
src/ml/: #driver.ml#  .merlin  Camlcoq.ml  CoqCerberus.ml  IO.ml  Makefile  README.md  _tags  assert.ml  assertion.ml  ast_printer.ml  coq_cerberus.ml  debugger.ml  driver.ml  dune  error_aggregator.ml  frontend.ml  frontendTest.ml  frontend_test.ml  imp_lexer.mll  imp_parser.mly  imp_runtime.c  interpreter.ml  llvm.ml  llvm_lexer.mll  llvm_parser.mly  llvm_printer.ml  llvm_printer.mli  main.ml  ollvm.ml  ollvm_lexer.mll  ollvm_parser.mly  ollvm_printer.ml  ollvm_printer.mli  platform.ml  range.ml  result.ml  result_aggregator.ml  test.ml  tester.ml  (+2 more)
src/ml/extracted/: #LLVMAst.mli#  CRelationClasses.mli.orig  Extract.v  ExtractFrontend.v  Makefile  README  dune  log.ml
src/ml/libtwophase/: Camlcoq.ml  dune  llvm_lexer.mll  llvm_parser.mly  llvm_printer.ml  llvm_printer.mli
src/ml/libvellvm/: Camlcoq.ml  ast_printer.ml  dune  histogram.ml  interpreter.ml  interpreter.mli  llvm_lexer.mll  llvm_parser.mly  llvm_printer.ml  llvm_printer.mli  parseUtil.ml  parse_util.ml
src/ml/testing/: .merlin  README.md  assertion.ml  dune  generate.ml
testenv/: Dockerfile
tests/: add.ll  add_twice.ll  add_twice_named.ll  alloca1.ll  alloca2.ll  args1.ll  badgep.ll  badgep2.ll  binarysearch.ll  bitcast1.ll  br1.ll  bubblesort_10.ll  c_weighted_sum.c  call.ll  call1.ll  call2.ll  call4.ll  call6.ll  callback1.ll  cbr.ll  euclid.ll  factorial.ll  factrect.ll  gcd_euclidian.ll  gep1.ll  gep2.ll  gep3.ll  gep4.ll  gep5.ll  gep6.ll  gep7.ll  gep8.ll  gep9.ll  global1.ll  gradedtests.ml  helloworld.ll  lfsr.ll  linear_search.ll  list.ll  list1.ll  (+18 more)
tests-quarantine-undef/: README.md
utilities/: README.org  vellvm-reduce.sh
(+1668 files in other folders)
