opam-version: "2.0"
synopsis: "Coq library implementing (executable) semantics for LLVM IR"
license: "GPL-3.0-or-later"


build: [make "-C" "src" "all" "-j%{jobs}%"]
install: [make "-C" "src" "install"]
    
depends: [
  "ocaml" {>= "4.14.0"}
  "cppo" 
  "dune" 
  "menhir" 
  "qcheck" 
  "coq" {>= "8.19.0" & < "8.20~"}
  "coq-ext-lib" {< "0.12.1"}
  "coq-paco" 
  "coq-ceres" 
  "coq-flocq" {>= "4.1.1"}
  "coq-mathcomp-ssreflect" 
  "coq-simple-io"
  "coq-itree" {>= "5.1.2" & < "5.2~"}
  "coq-quickchick" {>= "2.0.2" & < "2.0.3"}
]

tags: [
  "date:2023-03-04"

  "category:Computer Science/Programming Languages/Formal Definitions and Theory"
  "category:Computer Science/Semantics and Compilation/Compilation"
  "category:Computer Science/Semantics and Compilation/Semantics"  

  "keyword:semantics"
  "keyword:interpreter"
  "keyword:LLVM"
]
