opam-version: "2.0"
name: "rocq-vellvm"
maintainer: "stevez@cis.upenn.edu"
synopsis: "Rocq library implementing (executable) semantics for LLVM IR"

homepage: "https://vellvm.github.io/vellvm/"
dev-repo: "git+https://github.com/vellvm/vellvm.git"
bug-reports: "https://github.com/vellvm/vellvm/issues"
authors: [
  "Steve Zdancewic <stevez@cis.upenn.edu>"
  "Yannick Zakowski <yannick.zakowski@inria.fr>"
  "Calvin Beck <hobbes@seas.upenn.edu>"
  "Irene Yoon <euisuny@cis.upenn.edu>"
  "Gary (Hanxi) Chen <hanxic@seas.upenn.edu>"
]
license: "MIT"

build: [make "-C" "src" "all" "-j%{jobs}%"]
install: [make "-C" "src" "install"]
    
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.14.0"}
  "menhir"
  "rocq-core" {>= "9.0.0" & < "9.2~"}
  "rocq-stdlib" {>= "9.0.0" & < "9.2~"}
  "coq-ext-lib" {>= "0.13.0" & < "0.14~"}
  "coq-paco"  {>= "4.2.3" & < "4.3~"}
  "coq-flocq" {>= "4.2.0"}
  "coq-itree" {>= "5.2.1" & < "5.3~"}
]

tags: [
  "date:2026-07-06"

  "category:Computer Science/Programming Languages/Formal Definitions and Theory"
  "category:Computer Science/Semantics and Compilation/Compilation"
  "category:Computer Science/Semantics and Compilation/Semantics"

  "keyword:semantics"
  "keyword:interpreter"
  "keyword:LLVM"

  "logpath:Vellvm"
]
