(env
 (dev
  (flags
   (:standard -warn-error -A -w -34))))

(library
 (name base)
 (modules assert platform IO)
 (libraries libvellvm unix str))

(executables
 (names frontend)
 (modules frontend frontend_test)
 (libraries base extracted libvellvm unix str))

(executables
 (names main)
 (modes byte exe)
 (modules main driver result interpreter test tester)
 (libraries base extracted libvellvm testing unix str))
