(env
 (dev
  (flags
   (:standard -warn-error -A -w -34)))
 (release
  (ocamlopt_flags (:standard -O3))
  (flags
   (:standard -warn-error -A -w -34))))

(library
 (name vellvmLib)
 (modules assert platform IO)
 (libraries libvellvm unix str))

(executables
 (names frontend)
 (modules frontend frontendTest)
 (libraries vellvmLib extracted libvellvm unix str))

(executables
 (names main)
 (modes byte exe)
 (modules main driver result interpreter test frontendTest tester debugger)
 (libraries vellvmLib extracted libvellvm testing unix str))
