(env
 (dev
  (flags (:standard -g -w -20-32-33-39)))
 (release
  (flags (:standard -O3 -w -20-32-33-39))))

(coq.extraction
 (prelude Extract)
 (extracted_modules
   Applicative
   Archi
   Ascii
   AstLib
   Basics
   Basics0
   BinInt
   BinIntDef
   BinNat
   BinNums
   BinPos
   BinPosDef
   Binary
   BinarySingleNaN
   Bits
   Bool
   Bracket
   Byte
   CFG
   CRelationClasses
   CategoryKleisli
   CategoryOps
   CeresFormat
   CeresS
   CeresSerialize
   CeresString
   Char0
   ClassicalDedekindReals
   Compare_dec
   Consider
   ConstructiveCauchyReals
   ConstructiveCauchyRealsMult
   Coqlib
   Datatypes
   DecidableClass
   DecidableType
   Decimal
   DecimalString
   Defs
   Denotation
   Digits
   DynamicTypes
   DynamicValues
   EitherMonad
   Equalities
   EquivDec
   Eqv
   Error
   Exception
   Extras
   FMapAList
   FMapAVL
   FMapFacts
   FMapInterface
   FMapList
   FSetAVL
   FSetDecide
   FSetFacts
   FSetInterface
   FSetProperties
   FloatClass
   Floats
   Function
   Function0
   Functor
   Generic_fmt
   Global
   Handler
   Handlers
   Hexadecimal
   IEEE754_extra
   ITreeDefinition
   Injection
   Int
   Integers
   Interp
   InterpretationStack
   Intrinsics
   IntrinsicsDefinitions
   LLVMAst
   LLVMEvents
   List0
   List1
   ListUtil
   Local
   Logic
   MSetAVL
   MSetInterface
   Maps
   Memory
   MemoryAddress
   MemoryTheory
   Monad
   MonadExc
   MonadFix
   MonadPlus
   MonadReader
   MonadState
   MonadTrans
   MonadWriter
   MonadZero
   Monoid
   NPeano
   Nat
   Nat0
   Number
   Operations
   OptionMonad
   OrderedType
   OrderedTypeEx
   Orders
   OrdersAlt
   OrdersFacts
   OrdersTac
   PeanoNat
   Pick
   QArith_base
   QExtra
   Qabs
   Qreduction
   Raux
   Rdefinitions
   ReaderMonad
   Recursion
   Reducible
   RelDec
   Ring_theory
   Round
   SpecFloat
   Specif
   Stack
   State
   StateMonad
   String0
   String1
   Subevent
   Sum
   Sumbool
   TopLevel
   Traversable
   Traversal
   TypToDtyp
   Util
   Wf
   Wf0
   Z0
   ZArith_dec
   Zaux
   Zbits
   Zbool
   Zeven
   Zpower
 )
 (theories Vellvm)
)

(library
  (name extracted)
  (wrapped false)
  (synopsis "ML code extracted from Coq")
  )
